methods.args.MethodsArgs.scala.error
Erreur de compilation :
MethodsArgs:2: error: not found: type boolean
def move(nbPas: Int, versLAvant: boolean){
                                 ^